--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,3 +1,17 @@
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.5s;
+}
+.page-enter {
+  transform: translateX(10%);
+  opacity: 0;
+}
+
+.page-leave-active {
+  transform: translateX(-10%);
+  opacity: 0;
+}
+
 @font-face {
   font-family: "Century Gothic";
   src: url("/fonts/GOTHIC.TTF");
