--- a/assets/index.scss
+++ b/assets/index.scss
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: "Century Gothic";
-  src: url("/fonts/GOTHIC.TTF");
+  src: url("fonts/GOTHIC.TTF") format("truetype");
 }
 
 body {
