--- a/assets/index.scss
+++ b/assets/index.scss
@@ -17,9 +17,9 @@
   src: url("fonts/GOTHIC.TTF") format("truetype");
 }
 
-body {
-  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif !important;
-}
+// body {
+//   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif !important;
+// }
 
 h1 h2 h3 h4 h5 {
   color: #064482;
