--- a/assets/index.scss
+++ b/assets/index.scss
@@ -16,6 +16,54 @@
   transition: transform 0.5s;
 }
 
+::placeholder {
+  color: #064482 !important;
+  opacity: 0.5 !important;
+
+  font-size: 14px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding: 2em 8em;
+
+  color: #064482;
+}
+
+form > label {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+form > button {
+  width: 100%;
+  background-color: #064482 !important;
+
+  border: none;
+
+  font-weight: bold !important;
+  font-size: 0.8em !important;
+
+  padding-top: 1em !important;
+  padding-bottom: 1em !important;
+}
+
+form > * {
+  margin-bottom: 0.5em;
+}
+
+form > input {
+  border-radius: 3.5px !important;
+}
+
+form > select {
+  border-radius: 3.5px !important;
+}
+
 @font-face {
   font-family: "Century Gothic";
   src: url("fonts/GOTHIC.TTF") format("truetype");
