--- a/assets/index.scss
+++ b/assets/index.scss
@@ -373,6 +373,9 @@ select {
   height: 20rem;
   color: white;
   font-size: 20px;
+
+  padding: 1rem;
+  text-shadow: 0.5em 0.5em 1rem rgba(0, 0, 0, 1);
 }
 
 .lead {
